[package]
name = "cart"
version = "1.1.0"
edition = "2021"
authors = ["Sander in 't Veld <sanderintveld@hotmail.com>"]
license = "MIT"
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
fastrand = "1.6"
perlin2d = "0.2.6"
bitmaps = "3.2"
buddy-alloc = { version = "0.4.1", optional = true }

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
strip = true
overflow-checks = false

[features]
# use `--no-default-features` or comment out next line to disable allocator
default = ["buddy-alloc"]
